# cocoafob

./: .gitignore  CocoaFob.podspec  LICENSE  Package.swift  README  README.markdown
CocoaFob.xcworkspace/: contents.xcworkspacedata
cpp/: CMakeLists.txt  ConanHelper.cmake  README.markdown  REAME.md  cocoafob.xcconfig  download_required_libs.sh
cpp/cocoafob.xcodeproj/: project.pbxproj
cpp/cocoafob.xcodeproj/xcshareddata/xcschemes/: cocoafob.xcscheme  cocoafob_ctest.xcscheme
cpp/consoleapp/: main.cpp
cpp/ctest/: CFobCrypto_ctest.cpp  CFobLicGenerator_ctest.cpp  CFobLicVerifier_ctest.cpp  CFob_ctest_common.cpp  CFob_ctest_common.hpp  CMakeLists.txt
cpp/include/CocoaFob/: CFobCrypto.hpp  CFobLicGenerator.hpp  CFobLicVerifier.hpp
cpp/source/: CFobCrypto.cpp  CFobCrypto.hpp  CFobDataTypes.hpp  CFobInternal.cpp  CFobInternal.hpp  CFobLicGenerator.cpp  CFobLicGenerator.hpp  CFobLicVerifier.cpp  CFobLicVerifier.hpp
cpp/source/base32/: decoder.c  encoder.h
java/: .gitignore  pom.xml
java/src/main/java/com/xk72/cocoafob/: LicenseData.java  LicenseGenerator.java  LicenseGeneratorException.java
java/src/test/java/com/xk72/cocoafob/: LicenseGeneratorTest.java
java/src/test/resources/com/xk72/cocoafob/: pubkey.pem
keys/: dsaparam.pem  privkey.pem
objc/: CFobError.h  CFobError.m  CFobLicGenerator.h  CFobLicGenerator.m  CFobLicVerifier-HeaderOnly.h  CFobLicVerifier.h  CFobLicVerifier.m  CocoaFob-Info.plist  MyApp.scriptSuite  MyApp.scriptTerminology  NSData+PECrypt.h  NSData+PECrypt.m  NSString+PECrypt.h  NSString+PECrypt.m  NSString-Base64Extensions.h  NSString-Base64Extensions.m  PxLicGenerator.h  PxLicGenerator.m  PxLicVerifier.h  PxLicVerifier.m  URLCommand.h  URLCommand.m  cocoafob.1  cocoafob.m  cocoafob_Prefix.pch  decoder.h  encoder.c  pxlic.m  pxlic_Prefix.pch
objc/CocoaFobTests/: CFobLicVerifier-HeaderOnlyTest.m  CocoaFobTests-Info.plist  CocoaFobTests-Prefix.pch  CocoaFobTests.h  CocoaFobTests.m
objc/cocoafob.xcodeproj/: project.pbxproj
objc/cocoafob.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
php/: base32.php  licensekey.php
php/License/: dsa_priv.pem  dsa_pub.pem  generateLicense.php  license_generator.php  verifylicense.php
potionstore/: licensekey.rb
python/: cocoafob.py  license_server.py  server.wsgi
ruby/: licensekey.rb
swift/: README.md
swift/CocoaFob/: CFUtil.swift  CocoaFobError.swift  CocoaFobKeyGenerator.swift  CocoaFobLicGenerator.swift  CocoaFobLicVerifier.swift  CocoaFobStringExt.swift  Info.plist
swift/CocoaFob.xcodeproj/: project.pbxproj
swift/CocoaFobTests/: CocoaFobTests.swift
swift/cocoafob-keygen/: Functions.swift  main.swift
swift3/: README.md
swift3/CocoaFob/: CocoaFobLicGenerator.swift  CocoaFobLicVerifier.swift  CocoaFobStringExt.swift
swift3/CocoaFob.xcodeproj/: project.pbxproj
swift3/CocoaFobTests/: CocoaFobTests.swift
swift4/: README.md
swift4/CocoaFob/: CFUtil.swift  CocoaFobError.swift  CocoaFobLicGenerator.swift  CocoaFobLicVerifier.swift
swift4/CocoaFob.xcodeproj/: project.pbxproj
swift4/CocoaFob.xcodeproj/xcshareddata/xcschemes/: CocoaFob.xcscheme
swift4/CocoaFobTests/: CocoaFobTests.swift
swift5/: README.md
swift5/CocoaFob/: CFUtil.swift  CocoaFob.h  LicenseGenerator.swift  LicenseVerifier.swift
swift5/CocoaFob.xcodeproj/: project.pbxproj
swift5/CocoaFob.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift5/CocoaFob.xcodeproj/xcshareddata/xcschemes/: CocoaFob.xcscheme
swift5/CocoaFobTests/: CocoaFobTests.swift
swift5/cocoafob-keygen/: Functions.swift  Stderr.swift  main.swift
